# perturb-LM

./: .env.example  .gitignore  AGENTS.md  BioMorph-Search_project_direction.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
configs/: phase3b_linear_projection_v1.yaml  week1_jump_pilot.json
constraints/: phase3b-ci.txt  phase3c.txt
docs/: ABSTRACT_SEED.md  ARTIFACT_MAP.md  CI_AND_REMOTE_SMOKE.md  CLAIMS_LADDER.md  CODEX_TASKS.md  COLLABORATOR_HANDOFF.md  DATASETS.md  DATA_PROVENANCE.md  ENVIRONMENT_REPRODUCIBILITY.md  EVALUATION.md  EVALUATION_PROTOCOL.md  KNOWN_GOOD_LOCAL_RUN.md  METHODS_DRAFT.md  PHASE2_REAL_BASELINE_STATUS.md  PHASE2_REAL_DATA_AND_MODELS.md  PHASE2_REPRODUCIBILITY_CHECKLIST.md  PHASE3A_JUMP_REAL_DATA_READINESS.md  PHASE3B_FOUNDATION_READINESS.md  PHASE3C_TEXT_PROFILE_ALIGNMENT.md  PHASE3_ENGINEERING_HANDOFF.md  PHASE3_ENGINEERING_PLAN.md  PHASE3_ENGINEERING_TASKS.md  PHASE3_ENTRY_CRITERIA.md  PHASE3_PROPOSAL_TEMPLATE.md  README.md  REAL_RXRX_SETUP.md  ROADMAP.md  index_runtime_notes.md  local_data_status.md
notebooks/: README.md
prototype/: README.md  app.py
scripts/: audit_jump_pilot.py  audit_real_data.py  build_index.py  build_jump_profile_index.py  build_phase3c_text_embeddings.py  build_queries.py  build_rxrx_manifests.py  build_split_presets.py  check_phase2_readiness.py  check_public_copy_consistency.py  download_jump_pilot_profiles.py  download_rxrx.py  (+19 more)
(+133 files in other folders)
