[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturb-lm"
version = "0.1.0"
description = "Reproducible benchmark and prototype for natural-language retrieval over high-content microscopy perturbation datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15",
  "pillow>=10",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
prototype = [
  "streamlit>=1.35",
]
text = [
  "sentence-transformers>=3",
]

[project.scripts]
perturb-lm = "perturb_lm.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
